--- a/Theater-De-Rinkelaar/wwwroot/css/light-theme.css
+++ b/Theater-De-Rinkelaar/wwwroot/css/light-theme.css
@@ -78,15 +78,21 @@ small {
 } 
 
 .botlogo {
-    border-radius: 30px;
+    border-radius: 1.5vw;
     float: right;
-    height: 140px;
-    width: 140px;
-    border: 4px solid #7B0D1E;
+    height: 7vw;
+    width: 7vw;
+    border: 0.2vw solid #7B0D1E;
     margin-top: 15px;
     margin-left: 15px;
 }
 
+.socialmedia {
+    height: 5vw;
+    width: 5vw;
+    margin-top: 15px;
+    margin-left: 15px;
+}
 
 
 
@@ -512,9 +518,9 @@ body {
     color: #F8E5EE;
     text-align: center;
     padding: 5px 7px;
-    margin: auto;
+    margin-top: 2vw;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 0.9vw;
     border: 3px solid #000000;
     border-radius: 10px;
     transition: all .2s ease-in-out;
@@ -543,9 +549,8 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 15px black;
     border-radius: 10px;
-    background: #9F2042;
+    background: #67182d;
 }
 
 
@@ -553,15 +558,10 @@ body {
 ::-webkit-scrollbar-thumb {
     background: #7B0D1E;
     border-radius: 10px;
+    box-shadow: inset 0 0 3px white;
 }
 
 
-
-/*::-webkit-scrollbar-button {
-    width: 20px;
-    height: 150px;
-    background: red;
-}*/
 
 
 
@@ -825,23 +825,7 @@ p.text span {
     margin-left: 15px;
 }
 
-/*fotovakje op home-pagina*/
-.fotos1 {
-    flex-grow: 1;
-    height: 500px;
-    width: 40%;
-    background-color: #9F2042;
-    padding: 40px 10px;
-    margin: 20px;
-    text-align: center;
-    font-size: 20px;
-    color: #F8E5EE;
-    background-image: url(https://upload.wikimedia.org/wikipedia/commons/1/16/IvanVazov_National_Theatre_7.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    border: 5px solid #000000;
-    border-radius: 21px;
-}
+
 
 .underscoretable td {
     border-bottom: 2px solid #ddd;
@@ -853,13 +837,30 @@ p.text span {
     border-collapse: collapse;
 }
 
+.underupscoretable td {
+    border-collapse: collapse;
+    padding: 1vw;
+    background: #F8E5EE;
+    border-radius: 50vw;
+}
+
+.underupscoretable p{
+    color: black;
+}
+
+.underupscoretable {
+    margin: 1vw 0 1vw 0;
+}
+
+
 
 
 /*tijdstabel op home-pagina*/
 .tijdencolumn {
     flex-grow: 1;
     align-content: center;
-    width: 40%;
+    width: 30vw;
+    height: 20vw;
     background-color: #9F2042;
     padding: 10px;
     padding-bottom: 20px;
@@ -898,11 +899,27 @@ td {
     font-size: 1vw;
 }
 
+/*fotovakje op home-pagina*/
+.fotos1 {
+    flex-grow: 1;
+    height: 40vw;
+    background-color: #9F2042;
+    padding: 40px 10px;
+    margin: 20px;
+    text-align: center;
+    font-size: 20px;
+    color: #F8E5EE;
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/1/16/IvanVazov_National_Theatre_7.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 5px solid #000000;
+    border-radius: 21px;
+}
+
 /*tweede fotovakje op home-pagina*/
 .fotos2 {
     flex-grow: 1;
-    height: 500px;
-    width: 40%;
+    height: 40vw;
     background-color: #9F2042;
     padding: 40px 10px;
     margin: 20px;
@@ -918,8 +935,8 @@ td {
 
 .fotos3 {
     flex-grow: 1;
-    height: 500px;
-    width: 40%;
+    height: 25vw;
+    width: 40vw;
     background-color: #9F2042;
     padding: 40px 10px;
     margin: 20px;
@@ -939,4 +956,15 @@ td {
     align-items: center;
     place-content: center;
     flex-direction: column;
+}
+
+.maps {
+    margin-top: 2vw;
+    width: 20vw;
+    height: 16vw;
+}
+
+.spelletjes {
+    width: 60vw;
+    height: 50vw;
 }
